# protein-engineering

./: .gitignore  README.md
Res-contact/: README.md  classify_oligomers.py  optuna_sweep.py  pyproject.toml  requirements.txt  roadmap.txt
Res-contact/configs/: rescontact.yaml
Res-contact/data/fasta/: demo.fasta
Res-contact/notebooks/: res_contact_workflow.ipynb  res_contact_workflow_opt2.ipynb  res_contact_workflow_opt_msa.ipynb  visualization.ipynb
Res-contact/scripts/: build_baseline.py  build_msa_features.py  check_msa.py  check_msa_blastp.py  embed_esm2.py  eval.py  fuse_priors.py  results.txt  retrieve_homologs.py  run_msa_batch.py  train.py  train_stream.py
Res-contact/src/rescontact/: __init__.py
Res-contact/src/rescontact/api/: server.py
Res-contact/src/rescontact/data/: __init__.py  pdb_utils.py
Res-contact/src/rescontact/features/: embedding.py  msa.py  pair_features.py
Res-contact/src/rescontact/models/: __init__.py  bilinear_scorer.py  contact_net.py  monitor.py
Res-contact/src/rescontact/templates/: features.py  fuse.py  mmseqs.py
Res-contact/src/rescontact/utils/: metrics.py  psi.py  train.py
Res-contact/tests/: conftest.py  test_bilinear_scorer.py  test_msa_providers_mock.py  test_pair_features.py  test_pdb_utils.py  test_train_smoke.py
Seq_MLs/notebook/: msa.ipynb
archive/msa_utils/: Dockerfile  README.md  run_deepmsa.sh
configs/: pipeline.example.yaml
configs/mappings/: generic_example.yaml
data/graphrag/: assays.csv  candidates_p12345.json  contacts.csv  ligands.csv  retrieval_snapshot.json  retrieval_snapshot_cd19_struct.json  retrieval_snapshot_p12345.json  snap_cd19_pdb6AL4.json  structure_sequences.json  structures.csv  targets.csv  toxicity.csv
pipelines/: README.md  e2e_propose_mutations.py  train_rescontact.py  train_resintnet.py  train_seqml.py
